--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ d3.json("youtube-dl.json", function(error, root) {
       .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
       .style("display", function(d) { return d.parent === root ? "inline" : "none"; })
       .text(function(d) { return d.data.name; })
+      .append('svg:tspan')
+      .attr('x', 0)
+      .attr('dy', 20)
       .text(function(d) { return d.data.size; });
 
 
