--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
-      .text(function(d) { return d.data.size; });
+      .text(function(d) { return "Complexity: " + d.data.size; });
 
 
   var node = g.selectAll("circle,text");
