--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@ d3.json("youtube-dl.json", function(error, root) {
       .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
-      .text(function(d) { return d.data.size; });
+      .text(function(d) { return d.data.size; })
+      .append('button')
+      .attr('x', 0)
+      .attr('dy', 20)
+      .text(function(d) { return 'text'});
 
 
   var node = g.selectAll("circle,text");
