--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .append('button')
       .attr('x', 0)
       .attr('dy', 20)
-      .text(function(d) { return 'text'});
+      .text(function(d) { return 'text';});
 
 
   var node = g.selectAll("circle,text");
