--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ d3.json("youtube-dl.json", function(error, root) {
       .attr('x', 0)
       .attr('dy', 20)
       .text(function(d) { return d.data.size; })
-      //.append('svg:tspan')
-      //.attr('x', 0)
-      //.attr('dy', 20)
-      //.text(function(d) { return 'TESTE'; })
+      .append('svg:tspan')
+      .attr('x', 0)
+      .attr('dy', 20)
+      .text(function(d) { return 'TESTE'; })
       .append('xhtml')
       .attr('x', 0)
       .attr('dy', 20)
