--- a/index.html
+++ b/index.html
@@ -77,13 +77,11 @@ d3.json("youtube-dl.json", function(error, root) {
       .attr('x', 0)
       .attr('dy', 20)
       .text(function(d) { return d.data.size; })
-      .append('svg:tspan')
-      .attr('x', 0)
-      .attr('dy', 20)
-      .text(function(d) { return 'TESTE'; })
-      .append('xhtml')
-      .attr('x', 0)
-      .attr('dy', 20)
+      //.append('svg:tspan')
+      //.attr('x', 0)
+      //.attr('dy', 20)
+      //.text(function(d) { return 'TESTE'; })
+      .append('xhtml:boy')
       .html('<button type="button">Click Me!</button>');
 
 
