--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ d3.json("youtube-dl.json", function(error, root) {
       .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
-      //.text(function(d) { return d.data.size; })
-      .text(function(d) { return 0; })
+      .text(function(d) { return d.data.size; })
+      //.text(function(d) { return 0; })
       .append("button")
       attr("class", "button");
       //.append('svg:tspan')
