--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .text(function(d) { return d.data.size; })
       //.text(function(d) { return 0; })
       .append("button")
-      attr("class", "button");
+      .attr("class", "button");
       //.append('svg:tspan')
       //.attr('x', 0)
       //.attr('dy', 20)
