--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ d3.json("youtube-dl.json", function(error, root) {
       .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
-      .text(function(d) { return d.data.size; })
-      //.text(function(d) { return 0; })
-      .append("button")
+      //.text(function(d) { return d.data.size; })
+      .text(function(d) { return 0; })
+      .append("html:button")
       .attr("class", "button");
       //.append('svg:tspan')
       //.attr('x', 0)
