--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@ d3.json("youtube-dl.json", function(error, root) {
       .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
-      //.text(function(d) { return d.data.size; })
-      .text(function(d) { return 0; })
-      .append("html:button")
-      .attr("class", "button");
+      .text(function(d) { return d.data.size; })
+      .append('xlink')
+      .attr('href', 'wwww.google.com.br')
+      .text('google');
       //.append('svg:tspan')
       //.attr('x', 0)
       //.attr('dy', 20)
