--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .attr('x', 0)
       .attr('dy', 20)
       .text(function(d) { return d.data.size; })
-      .append('xlink')
+      .append('a')
       .attr('href', 'wwww.google.com.br')
       .text('google');
       //.append('svg:tspan')
