--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@ d3.json("youtube-dl.json", function(error, root) {
       .style("font-size", function(d){ return "12px";})
       .text(function(d) { return d.data.name; })
       .append('text')
-      .text(function(d) { return d.data.size; })
-      .append('svg:a')
-      .attr('href', 'wwww.google.com.br')
-      .text('google');
+      .text(function(d) { return d.data.size; });
+      //.append('svg:a')
+      //.attr('href', 'wwww.google.com.br')
+      //.text('google');
       //.append('svg:tspan')
       //.attr('x', 0)
       //.attr('dy', 20)
