--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .attr('dy', 20)
       .text(function(d) { return d.data.size; })
       .append('svg:a')
-      .attr('xlink:href', 'wwww.google.com.br')
+      .attr('xlink:href', 'http://www.google.com.br')
       .text('google');
       //.append('svg:tspan')
       //.attr('x', 0)
