--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@ d3.json("youtube-dl.json", function(error, root) {
       .attr('x', 0)
       .attr('dy', 20)
       .text(function(d) { return d.data.size; })
-      .setAttributeNS('http://www.w3.org/1999/xlink','href', 'myimage.jpg')
       .append('svg:a')
       .attr('href', 'https://www.google.com.br')
-      .append('svg:img')
-      .attr('src','github.jpg')
+      .append('image')
+      .attr('xlink:href','github.jpg')
       .text('google');
       //.append('svg:tspan')
       //.attr('x', 0)
