--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .append('svg:a')
       .attr('href', 'https://www.google.com.br')
       .append('image')
-      .attr('href','github.jpg')
+      .attr('src','github.jpg')
       .attr('width', 200)
       .attr('height', 200)
       .text('google');
