--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@ d3.json("youtube-dl.json", function(error, root) {
       .style("display", function(d) { return d.parent === root ? "inline" : "none"; })
       .style("font-weight", function(d){ return "bold";})
       .style("font-size", function(d){ return "12px";})
-      .text(function(d) { return d.data.name+'tttt'; })
+      .text(function(d) { return d.data.name; })
       .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
       .text(function(d) { return d.data.size; })
-      .append('svg:a')
-      .attr('href', 'https://www.google.com.br')
+      //.append('svg:a')
+      //.attr('href', 'https://www.google.com.br')
       .append('image')
-      .attr('src','github.jpg')
+      .attr('href','github.jpg')
       .attr('width', 200)
       .attr('height', 200)
       .text('google');
