--- a/index.html
+++ b/index.html
@@ -65,12 +65,7 @@ d3.json("youtube-dl.json", function(error, root) {
 
   var text = g.selectAll("text")
     .data(nodes)
-    .enter()
-    .append('image')
-      .attr('xlink:href','github.jpg')
-      .attr('width', 200)
-      .attr('height', 200)
-    .append("text")
+    .enter().append("text")
       .attr("class", "label")
       .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
       .style("display", function(d) { return d.parent === root ? "inline" : "none"; })
@@ -83,7 +78,10 @@ d3.json("youtube-dl.json", function(error, root) {
       .text(function(d) { return d.data.size; })
       //.append('svg:a')
       //.attr('href', 'https://www.google.com.br')
-      
+      .enter().append('image')
+      .attr('xlink:href','github.jpg')
+      .attr('width', 200)
+      .attr('height', 200)
       .text('google');
       //.append('svg:tspan')
       //.attr('x', 0)
