--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@ d3.json("youtube-dl.json", function(error, root) {
       .text(function(d) { return d.data.size; })
       //.append('svg:a')
       //.attr('href', 'https://www.google.com.br')
-      .enter().append('image')
+      .append('image')
       .attr('xlink:href','github.jpg')
-      .attr('width', 200)
-      .attr('height', 200)
+      .attr('width', 50)
+      .attr('height', 50)
       .text('google');
       //.append('svg:tspan')
       //.attr('x', 0)
