--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .filter(function(d) { return d.parent === focus || this.style.display === "inline"; })
         .style("fill-opacity", function(d) { return d.parent === focus ? 1 : 0; })
         .on("start", function(d) { if (d.parent === focus) this.style.display = "inline"; })
-        .on("end", function(d) { if (d.parent !== focus) this.style.display = "none"; });
+        .on("end", function(d) { if (d.parent == focus) this.style.display = "inline"; });
   }
 
   function zoomTo(v) {
