--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ d3.json("youtube-dl.json", function(error, root) {
     transition.selectAll("text")
       .filter(function(d) { return d.parent === focus || this.style.display === "inline"; })
         //.style("fill-opacity", function(d) { return d.parent === focus ? 1 : 0; })
+        .style("fill-opacity", function(d) { return 1; })
         .on("start", function(d) { if (d.parent === focus) this.style.display = "inline"; })
         .on("end", function(d) { if (d.parent !== focus) this.style.display = "none"; });
   }
