--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ d3.json("youtube-dl.json", function(error, root) {
     .data(nodes)
     .enter().append("text")
       .attr("class", "label")
-      .style("fill-opacity", function(d) { return 1; })
+      .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
       .style("display", function(d) { return "inline"; })
       .style("font-weight", function(d){ return "bold";})
       .style("font-size", function(d){ return "12px";})
