--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
-      .text(function(d) { return d.data.size; })
+      .text(function(d) { return 'Complex: '+ d.data.size; })
       .append('svg:a')
       .attr('href', 'https://www.google.com.br')
       .append('svg:tspan')
