--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
   background-color: #e7e7e7; color: black;
 }
 
+.node--root,
+.node--leaf {
+  pointer-events: none;
+}
+
 </style>
 <svg width="960" height="960"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
