--- a/index.html
+++ b/index.html
@@ -21,19 +21,11 @@
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
 }
 
-.link {
-  font: 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-anchor: middle;
-  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
-}
-
-
 
 .button {
   background-color: #e7e7e7; color: black;
 }
 
-.label,
 .node--root,
 .node--leaf {
   pointer-events: none;
@@ -91,11 +83,10 @@ d3.json("youtube-dl.json", function(error, root) {
       .text(function(d) { return 'Complex: '+ d.data.size; })
       .append('svg:a')
       .attr('href', 'https://www.google.com.br')
-      .append('text')
+      .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
-      .text( 'Text')
-      .attr("class", "link");
+      .text( 'Text');
       //.append('image')
       //.attr('xlink:href','github.jpg')
       //.attr('width', 50)
