--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .style("display", function(d) { return d.parent === root ? "inline" : "none"; })
       .style("font-weight", function(d){ return "bold";})
       .style("font-size", function(d){ return "12px";})
-      .text(function(d) { return d.data.name; })
+      .text(function(d) { return d.children == null ? 'Name:' + d.data.name + '()' : d.data.name; })
       .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
