--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .style("display", function(d) { return d.parent === root ? "inline" : "none"; })
       .style("font-weight", function(d){ return "bold";})
       .style("font-size", function(d){ return "12px";})
-      .text(function(d) { return d.children == null ? 'Name:' + d.data.name + '()' : d.data.name; })
+      .text(function(d) { return d.children == null ? 'Name: ' + d.data.name + '()' : d.data.name; })
       .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
@@ -82,7 +82,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .append('svg:tspan')
       .attr('x', 0)
       .attr('dy', 20)
-      .text(function(d) { return d.children == null ? 'GitHub Location: ' : ''; })
+      .text(function(d) { return d.children == null ? 'GitHub Location' : ''; })
       .style("font-color", "blue");
       //.append('image')
       //.attr('xlink:href','github.jpg')
