--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ d3.json("youtube-dl.json", function(error, root) {
     .data(nodes)
     .enter().append("circle")
       .attr("class", function(d) { return d.parent ? d.children ? "node" : "node node--leaf" : "node node--root"; })
-      //.style("fill", function(d) { return d.children ? color(d.depth) : null; })
+      .style("fill", function(d) { return d.children ? color(d.depth) : null; })
       .on("click", function(d) { if (focus !== d) zoom(d), d3.event.stopPropagation(); });
 
   var text = g.selectAll("text")
@@ -79,6 +79,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .text(function(d) { return d.children == null ? 'Complex: '+ d.data.size  : ''; })
       .append('svg:a')
       .attr('href', 'https://www.google.com.br')
+      .append("rect") 
       .attr('target','_blank')
       .attr('color','#008CBA')
       .attr('text', 'AQUI')
