--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@ d3.json("youtube-dl.json", function(error, root) {
       .text(function(d) { return d.children == null ? 'Complex: '+ d.data.size  : ''; })
       .append('svg:a')
       .attr('href', 'https://www.google.com.br')
-      .append("rect") 
       .attr('target','_blank')
-      .attr('color','#008CBA')
+      .attr('fill','#008CBA')
       .attr('text', 'AQUI')
       .append('svg:tspan')
       .attr('x', 0)
