--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .attr('x', 0)
       .attr('dy', 20)
       .text(function(d) { return d.children == null ? 'GitHub Location' : ''; })
-      .style("font-color", "blue");
+      .style("fill", "blue");
       //.append('image')
       //.attr('xlink:href','github.jpg')
       //.attr('width', 50)
