--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@ d3.json("youtube-dl.json", function(error, root) {
       .attr('dy', 20)
       .text(function(d) { return d.children == null ? 'GitHub Location' : ''; })
       .style("fill", '#008CBA')
-      .style('pointer-events','auto');
+      .style('pointer-events','auto')
+      .style('text-decoration', 'underline');
       //.append('image')
       //.attr('xlink:href','github.jpg')
       //.attr('width', 50)
