--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ d3.json("youtube-dl.json", function(error, root) {
       .attr('target','_blank')
       .attr('fill','#008CBA')
       .attr('text', 'AQUI')
-      .append('svg:tspan')
+      .append('svg:title')
       .attr('x', 0)
       .attr('dy', 20)
       .text(function(d) { return d.children == null ? 'GitHub Location' : ''; })
