--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <h1>Complex Circles - Youtube-dl</h1>
-    <svg width="960" height="960" border-radius="10"></svg>
+    <svg width="960" height="960" rx="20"></svg>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
 
