--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <body>
     <h1>Complex Circles - Youtube-dl</h1>
     <svg width="960" height="960" rx="20"></svg>
+    <path id="svgMask" d="M3,474 L957,471 942,24 40,1 z" stroke-linejoin="round" stroke="black" stroke-width="80"/>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
 
