--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <h1>Complex Circles - Youtube-dl</h1>
-    <svg id="svgelem" width="960" height="960" rx="20"></svg>
+    <svg id="svgelem" width="960" height="960"></svg>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
 
