--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   </head>
   <body>
     <h1>Complex Circles - Youtube-dl</h1>
-    <svg id="svgelem" width="960" height="960"></svg>
+    <svg id="svgelem" width="960" height="960"><rect x="50" y="20" rx="30" ry="30" width="150" height="150"
+      style="fill:blue;/"></svg>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
 
