--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@
   pointer-events: none;
 }
 
-#svgelem {
-            position: relative;
-            left: 10%;
-            -webkit-transform: translateX(-20%);
-            -ms-transform: translateX(-20%);
-            transform: translateX(-20%);
-         }
 </style>
 
 <html>
@@ -43,8 +36,7 @@
   </head>
   <body>
     <h1>Complex Circles - Youtube-dl</h1>
-    <svg id="svgelem" width="960" height="960"><rect x="50" y="20" rx="30" ry="30" width="150" height="150"
-      style="fill:blue;/"></svg>
+    <svg width="960" height="960"></svg>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
 
