--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <script>
 
     var svg = d3.select("svg"),
-        margin = 200,
+        margin = 20,
+        color='white'
         diameter = +svg.attr("width"),
         g = svg.append("g").attr("transform", "translate(" + diameter / 2 + "," + diameter / 2 + ")");
 
