--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     var svg = d3.select("svg"),
         margin = 20,
-        color='white'
+        color='white',
         diameter = +svg.attr("width"),
         g = svg.append("g").attr("transform", "translate(" + diameter / 2 + "," + diameter / 2 + ")");
 
