--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       svg
           .style("background", "none")
-          .style("border-radius", "20")
+          .style("border-radius", "20px")
           .on("click", function() { zoom(root); });
 
       zoomTo([root.x, root.y, root.r * 2 + margin]);
