--- a/index.html
+++ b/index.html
@@ -29,14 +29,31 @@
 
 </style>
 
+"processing"  :     "rgb(255,255,255)",#white
+    "accessing"   :     "rgb(255,99,71)",#"tomato"
+    "collections" :     "rgb(255,165,0)",#"orange",
+    "condition"   :     "rgb(240,230,140)",#"Khaki",
+    "conversion"  :     "rgb(34,139,34)",#"green",
+    "coordination":     "rgb(100,149,237)",#"blue",
+    "creation"    :     "rgb(79,79,79)",#"grey31",
+    "IO"          :     "rgb(0,191,255)",#"DeepSkyBlue",
+    "messages"    :     "rgb(0,100,0)",#"DarkGreen",
+    "undefined"  :     "rgb(255,228,181)",#"Moccasin",
+    "release"     :     "rgb(255,222,173)",#"NavajoWhite",
+    "setup"       :     "rgb(128,0,128)",#"Purple",
+    "test"        :     "rgb(255,182,193)",#"LightPink",
+    "validation"  :     "rgb(255,228,225)",#"MistyRose"
+
 <html>
   <head>
     <link rel="stylesheet" href="index.css">
-    <title>Testando</title>
+    <title>Complex Circles</title>
   </head>
   <body>
     <h1>Complex Circles - Youtube-dl</h1>
-    <svg width="960" height="960" background-color="none"></svg>
+    <p>color legend:</p>
+    <p>Processing: ; Accessing: ; Collections: ; Condition: ; Conversion: ; Coordination: ; Creation: ; IO: ; Messages: ; Release: ; Setup: ; Test: ; Validation: ; Undefined: ;</p>
+    <svg width="960" height="960"></svg>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
 
