--- a/index.html
+++ b/index.html
@@ -38,7 +38,20 @@
     <br>
     <br>
     <p><h5>color legend:</h6></p>
-    <p><h5>Processing: ; Accessing: ; Collections: ; Condition: ; Conversion: ; Coordination: ; Creation: ; IO: ; Messages: ; Release: ; Setup: ; Test: ; Validation: ; Undefined: ;</h6></p>
+    <p><h5>Processing: <div class="foo blue"></div>;
+           Accessing: ; 
+           Collections: ; 
+           Condition: ; 
+           Conversion: ; 
+           Coordination: ; 
+           Creation: ; 
+           IO: ; 
+           Messages: ; 
+           Release: ; 
+           Setup: ; 
+           Test: ; 
+           Validation: ; 
+           Undefined: ;</h6></p>
     <svg width="960" height="960"></svg>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
