--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <body>
     <h1>Complex Circles - Youtube-dl</h1>
     <div>
-      <p><h5>color legend:</h6></p>
-        <p><h5>Processing: <div class="foo blue"></div>;
+      <h5>Color legend:</h5>
+        <h5>Processing: <div class="foo blue"></div>;
                Accessing: ; 
                Collections: ; 
                Condition: ; 
@@ -50,7 +50,7 @@
                Setup: ; 
                Test: ; 
                Validation: ; 
-               Undefined: ;</h6></p>
+               Undefined: ;</h5>
         
     </div>
     <svg width="960" height="960"></svg>
