--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <h1>Complex Circles - Youtube-dl</h1>
     <div>
       <h5>Color legend:</h5>
-        <h5>Processing: <div class="foo blue">TESTE</div>;
+      <div class="foo blue"></div><h5>Processing</h5>;
+      <h5>
                Accessing: ; 
                Collections: ; 
                Condition: ; 
