--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <h1>Complex Circles - Youtube-dl</h1>
     <div>
       <h5>Color legend:</h5>
-      <div class="foo blue"></div><h5>Processing</h5>;
+      <div>
+        <div class="foo blue"></div><h5>Processing</h5>
+      </div>
       <h5>
                Accessing: ; 
                Collections: ; 
