--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div>
       <h5>Color legend:</h5>
       <div>
-        <div class="foo blue"></div><h5>Processing</h5>
+        <div class="foo processing"></div><h5>Processing</h5>
       </div>
       <h5>
                Accessing: ; 
