--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   </head>
   <body>
     <div>
-      <h1>Complex Circles - Youtube-dl</h1>
+      <h1><p>Complex Circles - Youtube-dl</p></h1>
     </div>
     <br>
     <div>
-        <h5>Color legend:</h5>
+        <h5><p>Color legend:</p></h5>
       
     </div>
     <svg width="960" height="960"></svg>
