--- a/index.html
+++ b/index.html
@@ -34,29 +34,23 @@
     <title>Complex Circles</title>
   </head>
   <body>
-    <div>
-      <h1><p>Complex Circles - Youtube-dl<br></bt></p></h1>
-    </div>
-    <br>
-    <div>
-      <p>
-        <h5>Color legend:</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Processing</h5>
-        <div class="foo" style="background:rgb(255,99,71)"></div><h5>Accessing</h5>
-        <div class="foo" style="background:rgb(255,165,0)"></div><h5>Collections</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Condition</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Conversion</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Coordination</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Creation</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>IO</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Messages</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Release</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Setup</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Test</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Validation</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Undefined</h5>
-      </p>   
-    </div>
+    <h1>Complex Circles - Youtube-dl</h1>
+    <h5>Color legend:</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Processing</h5>
+    <div class="foo" style="background:rgb(255,99,71)"></div><h5>Accessing</h5>
+    <div class="foo" style="background:rgb(255,165,0)"></div><h5>Collections</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Condition</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Conversion</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Coordination</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Creation</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>IO</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Messages</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Release</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Setup</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Test</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Validation</h5>
+    <div class="foo" style="background:rgb(255,255,255)"></div><h5>Undefined</h5>
+    
     <svg width="960" height="960"></svg>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
