--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <title>Complex Circles</title>
   </head>
   <body>
-    <h1>Complex Circles - Youtube-dl</h1>
+    <h1>Complex Circ<br>les - Youtube-dl</h1>
     <h5>Color legend:</h5>
     <div class="foo" style="background:rgb(255,255,255)"></div><h5>Processing</h5>
     <div class="foo" style="background:rgb(255,99,71)"></div><h5>Access<br>ing</h5>
