--- a/index.html
+++ b/index.html
@@ -37,20 +37,23 @@
     <div>
       <h1>Complex Circles - Youtube-dl</h1>
       <h5>Color legend:</h5>
-      <div class="foo" style="background:rgb(255,255,255)"></div><h5>Processing</h5>
-      <div class="foo" style="background:rgb(255,99,71)"></div><h5>Accessing</h5>
-      <div class="foo" style="background:rgb(255,165,0)"></div><h5>Collections</h5>
-      <div class="foo" style="background:rgb(240,230,140)"></div><h5>Condition</h5>
-      <div class="foo" style="background:rgb(34,139,34)"></div><h5>Conversion</h5>
-      <div class="foo" style="background:rgb(100,149,237)"></div><h5>Coordination</h5>
-      <div class="foo" style="background:rgb(79,79,79)"></div><h5>Creation</h5>
-      <div class="foo" style="background:rgb(0,191,255)"></div><h5>IO</h5>
-      <div class="foo" style="background:rgb(255,255,255)"></div><h5>Messages</h5>
-      <div class="foo" style="background:rgb(255,255,255)"></div><h5>Release</h5>
-      <div class="foo" style="background:rgb(255,255,255)"></div><h5>Setup</h5>
-      <div class="foo" style="background:rgb(255,255,255)"></div><h5>Test</h5>
-      <div class="foo" style="background:rgb(255,255,255)"></div><h5>Validation</h5>
-      <div class="foo" style="background:rgb(255,255,255)"></div><h5>Undefined</h5>
+      <div style="flex-direction: row;">
+        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Processing</h5>
+        <div class="foo" style="background:rgb(255,99,71)"></div><h5>Accessing</h5>
+        <div class="foo" style="background:rgb(255,165,0)"></div><h5>Collections</h5>
+        <div class="foo" style="background:rgb(240,230,140)"></div><h5>Condition</h5>
+        <div class="foo" style="background:rgb(34,139,34)"></div><h5>Conversion</h5>
+        <div class="foo" style="background:rgb(100,149,237)"></div><h5>Coordination</h5>
+        <div class="foo" style="background:rgb(79,79,79)"></div><h5>Creation</h5>
+        <div class="foo" style="background:rgb(0,191,255)"></div><h5>IO</h5>
+        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Messages</h5>
+        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Release</h5>
+        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Setup</h5>
+        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Test</h5>
+        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Validation</h5>
+        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Undefined</h5>
+      </div>
+      
 
     </div>
     
