--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div>
       <h1>Complex Circles - Youtube-dl</h1>
       <h5>Color legend:</h5>
-      <div style="flex-direction: row;">
+      <div style="flex-direction: row; display: flex">
         <div class="foo" style="background:rgb(255,255,255)"></div><h5>Processing</h5>
         <div class="foo" style="background:rgb(255,99,71)"></div><h5>Accessing</h5>
         <div class="foo" style="background:rgb(255,165,0)"></div><h5>Collections</h5>
@@ -51,7 +51,7 @@
         <div class="foo" style="background:rgb(255,255,255)"></div><h5>Setup</h5>
         <div class="foo" style="background:rgb(255,255,255)"></div><h5>Test</h5>
         <div class="foo" style="background:rgb(255,255,255)"></div><h5>Validation</h5>
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Undefined</h5>
+        <div class="foo" style="background:rgb(255,228,181)"></div><h5>Undefined</h5>
       </div>
       
 
