--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
   <body>
     <div>
       <h1>Complex Circles - Youtube-dl</h1>
-      <h5>Color legend:</h5>
       <div style="flex-direction: row; display: flex; align-items: center;">
-        <div class="foo" style="background:rgb(255,255,255)"></div><h5>Processing</h5>
+        <div class="foo" style="background:rgb(255,255,255); padding-left: 5px;"></div><h5>Processing</h5>
         <div class="foo" style="background:rgb(255,99,71)"></div><h5>Accessing</h5>
         <div class="foo" style="background:rgb(255,165,0)"></div><h5>Collections</h5>
         <div class="foo" style="background:rgb(240,230,140)"></div><h5>Condition</h5>
