--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div>
       <h1>Complex Circles - Youtube-dl</h1>
       <div style="flex-direction: row; display: flex; align-items: center;">
-        <div class="foo" style="background:rgb(255,255,255); padding-left: 50px;"></div><h5>Processing</h5>
+        <div class="foo" style="background:rgb(255,255,255)"></div><h5 style="padding-right: 5px;">Processing</h5>
         <div class="foo" style="background:rgb(255,99,71)"></div><h5>Accessing</h5>
         <div class="foo" style="background:rgb(255,165,0)"></div><h5>Collections</h5>
         <div class="foo" style="background:rgb(240,230,140)"></div><h5>Condition</h5>
