--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <div>
-      <h1 style="align-items: center;">Complex Circles - Youtube-dl</h1>
+      <h1 style="text-align:center;">Complex Circles - Youtube-dl</h1>
       <div style="flex-direction: row; display: flex; align-items: center;">
         <div class="foo" style="background:rgb(255,255,255)"></div><h4 style="padding-right: 8px;">Processing</h4>
         <div class="foo" style="background:rgb(255,99,71)"></div><h4 style="padding-right: 8px;">Accessing</h4>
