--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="foo" style="background:rgb(100,149,237)"></div><h4 style="padding-right: 8px;">Coordination</h4>
         <div class="foo" style="background:rgb(79,79,79)"></div><h4 style="padding-right: 8px;">Creation</h4>
         <div class="foo" style="background:rgb(0,191,255)"></div><h4 style="padding-right: 8px;">IO</h4>
-        <div class="foo" style="background:rgb(0,100,0)"></div><h4 style="padding-right: 8px;">Messages</h4>
+        <div class="foo" style="background:rgb(139, 0, 0)"></div><h4 style="padding-right: 8px;">Messages</h4>
         <div class="foo" style="background:rgb(255,222,173)"></div><h4 style="padding-right: 8px;">Release</h4>
         <div class="foo" style="background:rgb(128,0,128)"></div><h4 style="padding-right: 8px;">Setup</h4>
         <div class="foo" style="background:rgb(255,182,193)"></div><h4 style="padding-right: 8px;">Test</h4>
