--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1 style="text-align:center;">Complex Circles - Youtube-dl</h1>
       <div style="flex-direction: row; display: flex; align-items: center;">
         <div class="foo" style="background:rgb(255,255,255)"></div><h4 style="padding-right: 8px;">Processing</h4>
-        <div class="foo" style="background:(255, 140, 0)"></div><h4 style="padding-right: 8px;">Accessing</h4>
+        <div class="foo" style="background:rgb(255, 140, 0)"></div><h4 style="padding-right: 8px;">Accessing</h4>
         <div class="foo" style="background:rgb(255,165,0)"></div><h4 style="padding-right: 8px;">Collections</h4>
         <div class="foo" style="background:rgb(240,230,140)"></div><h4 style="padding-right: 8px;">Condition</h4>
         <div class="foo" style="background:rgb(34,139,34)"></div><h4 style="padding-right: 8px;">Conversion</h4>
